# SmartExAnalyticsHubServer

./: .coveragerc  .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: create_app.py  main.py  prestart.sh  routers.py  run_main.py
app/core/: config.py  database.py  exceptions.py  middlewares.py  structlog.py
app/core/certs/: jwt-private.pem  jwt-public.pem
app/core/exceptions/: __init__.py  base.py  handlers.py
app/core/gunicorn/: app_options.py  application.py  logger.py
app/database/models/mixins/: action_time.py  primary_keys.py
app/database/unit_of_work/: base.py  sqlalchemy.py
app/enums/: __init__.py  filters.py
app/filters/: expressions.py
app/models/: __init__.py  base.py
app/models/mixins/: __init__.py
app/presentation/: __init__.py
app/presentation/rest/: __init__.py
app/presentation/rest/dependencies/: base.py
app/presentation/rest/v1/: __init__.py
app/repositories/: base.py
app/schemas/: base.py
app/shared/application/: unit_of_work.py
app/shared/domain/: exceptions.py  filters.py
app/shared/infrastructure/: models_registry.py  orm_base.py  repositories.py  unit_of_work.py
app/shared/infrastructure/orm_mixins/: __init__.py  action_time.py  primary_keys.py
app/shared/infrastructure/security/: __init__.py  jwt.py  password.py
app/shared/infrastructure/utils/: id_generator.py
app/shared/presentation/: dependencies.py  schemas.py
app/unit_of_work/: sqlalchemy.py
app/users/application/: interfaces.py  use_cases.py
app/users/domain/: entities.py  enums.py  exceptions.py
app/users/infrastructure/: orm_models.py  repositories.py
app/users/presentation/: dependencies.py  router.py  schemas.py
app/utils/: __init__.py  generators.py  paginations.py
migrations/: env.py
migrations/versions/: 2026_03_13_1814-935b16172db5_ad.py  2026_03_14_0000-1ea0607620c3_add_users.py  2026_03_16_1522-4ecf2ab11c9d_init_user_table.py
tests/: conftest.py
tests/fixtures/: user_fixtures.py
tests/fixtures/factories/: user_factory.py
tests/fixtures/fakes/: fake_uow.py  fake_user_repository.py
tests/integration/infrastructure/: test_repositories.py
tests/unit/application/: test_use_cases.py
tests/unit/domain/: test_entities.py
tests/unit/presentation/: test_presentations.py  test_schemas.py
tests/users/: test_api.py
