[project]
name = "smartex_analytics_hub_server"
version = "0.1.0"
description = "Backend server for SmartEx Analytics Hub"
authors = [{ name = "WayupKG", email = "adikgk232323@gmail.com" }]
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
  "fastapi[standard]>=0.135.1,<0.136",
  "pydantic[email]>=2.12.5,<3",
  "pydantic-settings>=2.13.1,<3",
  "sqlalchemy[asyncio]>=2.0.48,<3",
  "asyncpg>=0.31.0,<0.32",
  "alembic>=1.18.4,<2",
  "gunicorn>=25.1.0,<26",
  "pyjwt[crypto]>=2.12.0,<3",
  "aiofiles>=25.1.0,<26",
  "bcrypt>=5.0.0,<6",
  "orjson>=3.11.7,<4",
  "python-socketio>=5.16.1,<6",
  "structlog>=25.5.0",
  "pre-commit>=4.5.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
"E", "W", "F", "I", "UP", "B", "C4", "SIM", "PT",
    "RET", "ARG", "PTH", "ERA", "T20", "TCH", "PL", "RUF",
    "ASYNC" # Проверки для асинхронного кода
]
ignore = [
    "D", "RUF001", "RUF002", "RUF003", "PLW3201", "UP046",
    "ISC001" # Рекомендуется отключать при использовании ruff format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
